--- a/templates/admin/a_item_comment_manage.html
+++ b/templates/admin/a_item_comment_manage.html
@@ -62,10 +62,10 @@
                         </div>
                         <div class="col-md-2">
                             <div class="row">
-                                <a  href="/comment_image_manage/?comment_id={{i.comment_id}}" style='cursor:pointer;text-decoration:none;'><span class="glyphicon glyphicon-pencil"></span> 图片管理</a>                               
+                                <a  href="/myadmin/comment_image_manage/?comment_id={{i.comment_id}}" style='cursor:pointer;text-decoration:none;'><span class="glyphicon glyphicon-pencil"></span> 图片管理</a>                               
                             </div>
                             <div class="row">
-                                    <a  href="/editor_comment/?comment_id={{i.comment_id}}&back_url={{request.get_full_path}}" style='cursor:pointer;text-decoration:none;'><span class="glyphicon glyphicon-pencil"></span> 编辑</a>
+                                    <a  href="/myadmin/edit_item_comment/?comment_id={{i.comment_id}}&back_url={{request.get_full_path}}" style='cursor:pointer;text-decoration:none;'><span class="glyphicon glyphicon-pencil"></span> 编辑</a>
                             </div>
                         </div>
                     </div>
