--- a/templates/admin/a_member_manage.html
+++ b/templates/admin/a_member_manage.html
@@ -262,7 +262,7 @@
                         $('#exampleModal').modal('hide')
                         location.reload()
                     }else{
-                        $('.return_msg_box').text(value.msg[0])
+                        $('.return_msg_box').text(value.message)
                     }
                 },
                 'json'
