修改一些小bug

--- a/ubskin_web_django/templates/item/a_item_image_manage.html
+++ b/ubskin_web_django/templates/item/a_item_image_manage.html
@@ -114,7 +114,7 @@
                 formData.append('csrfmiddlewaretoken', getCookie("csrftoken"))
                 $.ajax({
                     type:'post',
-                    url:"/myadmin/js/item_image_create/",
+                    url:"{% url 'item_image_create' %}",
                     data:formData,
                     dataType:'json',
                     contentType:false,
