--- a/ubskin_web_django/templates/a_layout.html
+++ b/ubskin_web_django/templates/a_layout.html
@@ -67,10 +67,10 @@
                   <!-- Menu Footer-->
                   <li class="user-footer">
                     <div class="pull-left">
-                        <a href="/myadmin/change_password/" class="btn btn-default btn-flat">更改密码</a>
+                        <a href="{% url 'change_password' %}" class="btn btn-default btn-flat">更改密码</a>
                     </div>  
                     <div class="pull-right">
-                      <a href="/myadmin/signout/" class="btn btn-default btn-flat">注销</a>
+                      <a href="{% url 'signout' %}" class="btn btn-default btn-flat">注销</a>
                     </div>
                   </li>
                 </ul>
