新增订单管理：扫码出库、物品码表、收货方管理

--- a/ubskin_web_django/templates/a_layout.html
+++ b/ubskin_web_django/templates/a_layout.html
@@ -103,6 +103,9 @@
             <li class="brands_manage"><a href="{% url 'brand_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>品牌管理</span></a></li>
             <li class="categories_manage"><a href="{% url 'categorie_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>分类管理</span></a></li>
             <li class="item_comments_manage"><a href="{% url 'item_comment_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>评论管理</span></a></li>
+            <li class="order_manage"><a href="{% url 'order_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>出库管理</span></a></li>
+            <li class="item_qr_code_manage"><a href="{% url 'item_qr_Code_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>物码管理</span></a></li>
+            <li class="recv_manage"><a href="{% url 'recv_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>收货方管理</span></a></li>
           </ul>
         </section>
         <!-- /.sidebar -->
