--- a/ubskin_web_django/templates/order/a_jm_stock_batch_info.html
+++ b/ubskin_web_django/templates/order/a_jm_stock_batch_info.html
@@ -1,5 +1,5 @@
 <div id="">
-    <p><strong>出库单号：{{ code_data.out_order_id }}</strong></p>
+    <p><strong>出库单号：{{ code_data.stock_batch_id }}</strong></p>
     <p>收货地址: {{ code_data.recv_code }} - {{ code_data.recv_addr }}</p>
     <p></p>
     <hr>
