--- a/ubskin_web_django/templates/order/a_order_manage.html
+++ b/ubskin_web_django/templates/order/a_order_manage.html
@@ -46,7 +46,7 @@
         </div>
     </div>
     <div class="col-md-4">
-        <a type="button" class="btn btn-info add_member_btn" type="button" href="{% url 'out_order' %}" >开始扫码出库 <span class="glyphicon glyphicon-plus"></span></a>
+        <a type="button" class="btn btn-info add_member_btn" type="button" href="{% url 'stock_batch' %}" >开始扫码出库 <span class="glyphicon glyphicon-plus"></span></a>
         <!-- <button type="button" class="btn btn-default choose_member" type="button">选择<span class="glyphicon glyphicon-saved"></span></button>
         <button type="button" class="btn btn-danger delete_member" type="button">删除<span class="glyphicon glyphicon-trash"></span></button> -->
     </div>
@@ -80,11 +80,11 @@
                 <tbody>
                 {% for stock in data_list %}
                 <tr>
-                    <th scope="row">{{ stock.out_order_id }}</th>
+                    <th scope="row">{{ stock.stock_batch_id }}</th>
                     <td>{{ stock.recv_code }} - {{ stock.recv_addr }}</td>
                     <td>{{ stock.code_count }}</td>
                     <td>{% parse_timestamps stock.create_time %}</td>
-                    <td><a href="#modalItemCodes" data-toggle="modal" data-target="#modalItemCodes" data-batchid="{{ stock.order_id }}">详情</a></td>
+                    <td><a href="#modalItemCodes" data-toggle="modal" data-target="#modalItemCodes" data-batchid="{{ stock.stock_id }}">详情</a></td>
                 </tr>
                 {% endfor %}
                 </tbody>
@@ -130,7 +130,7 @@
                 let btn = $(e.relatedTarget);
                 let batchId = btn.data('batchid');
                 
-                $('#id_modal_body').load('{% url "jm_out_order_item_info" %}?data_id=' + batchId, (res, status, xhr) => {
+                $('#id_modal_body').load('{% url "a_jm_stock_batch_info" %}?data_id=' + batchId, (res, status, xhr) => {
                     if (status == "error") {
                         $('#id_modal_body').html('<p>加载数据时出错, 请稍后再试</p>');
                         return;
