修复一处小bug，删除冗余代码

--- a/ubskin_web_django/templates/item/a_item_manage.html
+++ b/ubskin_web_django/templates/item/a_item_manage.html
@@ -69,7 +69,7 @@
                             国外价格：{{i.foreign_price}}
                         </div>
                         <div class="row">
-                            容量：/规格：{% if i.specifications_type_id %}{% get_value_by_key specifications_type_dict i.specifications_type_id %}{% endif %}
+                            容量：/规格：{% if i.specifications_type_id is not None %}{% get_value_by_key specifications_type_dict i.specifications_type_id %}{% endif %}
                         </div>
                     </div>
                     <div class="col-md-2">
