--- a/ubskin_web_django/templates/item/a_add_item.html
+++ b/ubskin_web_django/templates/item/a_add_item.html
@@ -17,54 +17,54 @@
         <div class="box-body">
             <input type="text" name="item_id" value="{{ form_data.item_id }}" style="display: none">
         <div class="form-group">
-            <label for="recipient-name" class="control-label">商品名称:</label>
+            <label class="control-label">商品名称:</label>
             <input type="text" class="form-control" name="item_name" value="{{ form_data.item_name }}">
             {% if form_errors and form_errors.item_name %} <span style="color: red">{{ form_errors.item_name }}</span> {% endif %}
         </div>
         <div class="form-group">
-            <label for="recipient-name" class="control-label">商品信息:</label>
+            <label class="control-label">商品信息:</label>
             <input type="text" class="form-control" name="item_info" value="{% if form_data.item_info %} {{ form_data.item_info }} {% endif %}">
         </div>
         <div class="form-group">
-            <label for="recipient-name" class="control-label">商品编码:</label>
+            <label class="control-label">商品编码:</label>
             <input type="text" class="form-control" name="item_code" value="{% if form_data.item_code %}{{ form_data.item_code }} {% endif %}">
             {% if form_errors and form_errors.item_code %} <span style="color: red">{{ form_errors.item_code }}</span> {% endif %}
         </div>
         <div class="form-group">
-            <label for="recipient-name" class="control-label">商品条码:</label>
+            <label class="control-label">商品条码:</label>
             <input type="text" class="form-control" name="item_barcode" value="{% if form_data.item_barcode %}{{ form_data.item_barcode }} {% endif %}">
             {% if form_errors and form_errors.item_barcode %} <span style="color: red">{{ form_errors.item_barcode }}</span> {% endif %}
         </div>
         <div class="form-group">
-            <label for="recipient-name" class="control-label">原价:</label>
-            <input type="number" onkeyup="value=value.replace(/[^\d]/g,'')" class="form-control" name="price" value="{{ form_data.price }}">
+            <label class="control-label">原价:</label>
+            <input type="text" onkeyup="value=value.replace(/[^\d\.]/g,'')" class="form-control" name="price" value="{% if form_data.price %}{{ form_data.price }} {% endif %}">
         </div>
         <div class="form-group">
-            <label for="recipient-name" class="control-label">现价:</label>
-            <input type="number" onkeyup="value=value.replace(/[^\d]/g,'')" class="form-control" name="current_price" value="{{ form_data.current_price }}">
+            <label class="control-label">现价:</label>
+            <input type="text" onkeyup="value=value.replace(/[^\d\.]/g,'')" class="form-control" name="current_price" value="{% if form_data.current_price %}{{ form_data.current_price }} {% endif %}">
         </div>
         <div class="form-group">
-            <label for="recipient-name" class="control-label">国外价格:</label>
-            <input type="number" onkeyup="value=value.replace(/[^\d]/g,'')" class="form-control" name="foreign_price" value="{{ form_data.foreign_price }}">
+            <label class="control-label">国外价格:</label>
+            <input type="text" onkeyup="value=value.replace(/[^\d\.]/g,'')" class="form-control" name="foreign_price" value="{% if form_data.foreign_price %}{{ form_data.foreign_price }} {% endif %}">
         </div>
         <div class="form-group">
-            <label for="recipient-name" class="control-label">关键字:</label>
+            <label class="control-label">关键字:</label>
             <input type="text" class="form-control" name="key_word" value="{% if form_data.key_word %}{{ form_data.key_word }} {% endif %}">
         </div>
         <div class="form-group">
-            <label for="recipient-name" class="control-label">产地:</label>
+            <label class="control-label">产地:</label>
             <input type="text" class="form-control" name="origin" value="{% if form_data.origin %} {{ form_data.origin }} {% endif %}">
         </div>
         <div class="form-group">
-            <label for="recipient-name" class="control-label">保质期:</label>
+            <label class="control-label">保质期:</label>
             <input type="text" class="form-control" name="shelf_life" value="{% if form_data.shelf_life %} {{ form_data.shelf_life }} {% endif %}">
         </div>
         <div class="form-group">
-            <label for="recipient-name" class="control-label">容量:</label>
+            <label class="control-label">容量:</label>
             <input type="text" class="form-control" name="f_capacity" value="{% if form_data.capacity %} {{ form_data.capacity }} {% endif %}">
         </div>
         <div class="form-group">
-            <label for="recipient-name" class="control-label">规格类型:</label>
+            <label class="control-label">规格类型:</label>
             <select name="specifications_type_id" class="form-control">
                 <option value="" selected>选择规格</option>
                 {% for i in specifications_type_dict %}
@@ -77,7 +77,7 @@
             </select>
         </div>
         <div class="form-group">
-            <label for="recipient-name" class="control-label">选择品牌:</label>
+            <label class="control-label">选择品牌:</label>
             <select name="brand_id" class="form-control">
                 <option value="" selected>--选择--</option>
                 {% for i in brands_dict %}
@@ -90,7 +90,7 @@
             </select>
         </div>
         <div class="form-group">
-            <label for="recipient-name" class="control-label">选择分类:</label>
+            <label class="control-label">选择分类:</label>
             <select name="categories_id" class="form-control">
                 <option value="" selected>--选择--</option>
                 {% for i in categories_dict %}
@@ -103,11 +103,11 @@
             </select>
         </div>
         <div class="form-group">
-            <label for="recipient-name" class="control-label">适用人群:</label>
+            <label class="control-label">适用人群:</label>
             <input type="text" class="form-control" name="for_people" value="{% if form_data.for_people %} {{ form_data.for_people }} {% endif %}"> 
         </div>
         <div class="form-group">
-            <label for="recipient-name" class="control-label">重量:</label>
+            <label class="control-label">重量:</label>
             <input type="text" class="form-control" name="weight" value="{% if form_data.weight %}{{ form_data.weight }}{% endif %}">
         </div>
         </div><!-- /.box-body -->
