--- a/ubskin_web_django/templates/item/a_add_item.html
+++ b/ubskin_web_django/templates/item/a_add_item.html
@@ -61,7 +61,7 @@
         </div>
         <div class="form-group">
             <label class="control-label">容量:</label>
-            <input type="text" class="form-control" name="f_capacity" value="{% if form_data.capacity %} {{ form_data.capacity }} {% endif %}">
+            <input type="text" class="form-control" name="capacity" value="{% if form_data.capacity %} {{ form_data.capacity }} {% endif %}">
         </div>
         <div class="form-group">
             <label class="control-label">规格类型:</label>
