--- a/ubskin_web_django/templates/item/a_item_manage.html
+++ b/ubskin_web_django/templates/item/a_item_manage.html
@@ -69,7 +69,7 @@
                             国外价格：{{i.foreign_price}}
                         </div>
                         <div class="row">
-                            容量：/规格：{% if i.specifications_type is not None %}{{ i.specifications_type }}{% endif %}
+                            单位：{% if i.specifications_type is not None %}{{ i.specifications_type }}{% endif %}/规格：{% if i.capacity is not None %}{{ i.capacity }}{% endif %}
                         </div>
                     </div>
                     <div class="col-md-2">
