页面小修改

--- a/ubskin_web_django/templates/a_layout.html
+++ b/ubskin_web_django/templates/a_layout.html
@@ -148,7 +148,7 @@
         <div class="pull-right hidden-xs">
           <b>Version</b> 0.05
         </div>
-        <strong>UbsKinWeb &copy; 2018</strong>
+        <strong>UBSKIN &copy; 2018</strong>
       </footer>
       
       <!-- Control Sidebar -->      
