--- a/ubskin_web_django/templates/item/a_add_categorie.html
+++ b/ubskin_web_django/templates/item/a_add_categorie.html
@@ -40,7 +40,7 @@
             <input type="file" class="form-control" name="categorie_image">
         </div>
         <div class="image-box">
-            <img src="{% if form_data.image_path %}{{ form_data.image_path }}{% endif %}" alt="图片预览" style="width: 300px;height: 300px;">
+            <img src="{%if form_data and form_data.photo_id %}{% build_photo_url form_data.photo_id %}{% endif %}" alt="图片预览" style="width: 300px;height: 300px;">
         </div>
       </div><!-- /.box-body -->
 
