--- a/ubskin_web_django/templates/item/a_categorie_manage.html
+++ b/ubskin_web_django/templates/item/a_categorie_manage.html
@@ -49,7 +49,7 @@
             <div class="panel-body">
                 <div class="media-left">
                     <a href="#">
-                        <img class="media-object" src="{% if i.image_path %}{{i.image_path }}{% else %}/static/images/user-default.jpg{% endif %}" style="width: 100px; height: 100px;">
+                        <img class="media-object" src="{% build_photo_url i.photo_id %}" style="width: 100px; height: 100px;">
                     </a>
                 </div>
                 <div class="media-body">
