已为所有的模块加上搜索功能

--- a/ubskin_web_django/templates/order/a_item_qr_code_manage.html
+++ b/ubskin_web_django/templates/order/a_item_qr_code_manage.html
@@ -33,7 +33,7 @@
             <div class="col-md-8">
                 <form action="" method="GET" class="search_input">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="搜索物品识别码" name="search_value" value="{{ search_value }}">
+                    <input type="text" class="form-control" placeholder="搜索出库单号" name="search_value" value="{{ search_value }}">
                     <span class="input-group-btn">
                         <button class="btn btn-default search_input_btn" type="submit">搜索</button>
                     </span>
