--- a/ubskin_web_django/templates/member/a_signin.html
+++ b/ubskin_web_django/templates/member/a_signin.html
@@ -38,7 +38,7 @@
     <form action="" method="post">
       {% csrf_token %}
       <div class="form-group has-feedback">
-        <input type="text" name="username" placeholder="输入用户名或者手机号" class="form-control" id="exampleInputLoginName" value="{{ form_data.username }}">
+        <input type="text" name="username" placeholder="输入超级用户名或者手机号" class="form-control" id="exampleInputLoginName" value="{{ form_data.username }}">
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
